--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
 			<div class="head__inner">
 				<h1 class="head__title">Lorem ipsum dolor sit amet.</h1>
-				<h2 class="head__subtitle">Lorem, ipsum dolor.</h2>
+				<h2 class="head__subtitle">Lorem, ipsum dolor</h2>
 			</div>
 		</div>
 	</section>
